# device_app_rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  env_example  log_config.yml
keys/: GENERATE_KEYS.md
migrations/: 20250704034651_user_create_table.down.sql  20250704034651_user_create_table.up.sql  20250814200202_broker_create_table.down.sql  20250814200202_broker_create_table.up.sql  20250817234556_device_create_table.down.sql  20250817234556_device_create_table.up.sql  20250921002145_message_create_table.down.sql  20250921002145_message_create_table.up.sql  20251105124551_device_scale_create_table.down.sql  20251105124551_device_scale_create_table.up.sql  MIGRATIONS.md
src/: main.rs  state.rs
src/auth/: auth_config.rs  auth_handler.rs  auth_midlleware.rs  auth_model.rs  auth_route.rs  auth_tool.rs  mod.rs
src/broker/: broker_connection.rs  broker_handler.rs  broker_model.rs  broker_query.rs  broker_route.rs  broker_tool.rs  mod.rs
src/data_store/: data_store_device_handler.rs  data_store_device_model.rs  data_store_device_query.rs  data_store_device_route.rs  data_store_tool.rs  mod.rs
src/database/: connection_mongo.rs  connection_postgres.rs  mod.rs
src/device/: device_actuator_model.rs  device_adoption_handler.rs  device_adoption_model.rs  device_adoption_tool.rs  device_border_model.rs  device_handler.rs  device_message_model.rs  device_message_query.rs  device_model.rs  device_query.rs  device_route.rs  device_sensor_type_model.rs  device_type_model.rs  mod.rs
src/error_app/: error_app.rs  mod.rs
src/health_check/: health_check_cfg.rs  health_check_handler.rs  mod.rs
src/paginate/: mod.rs  paginate_model.rs
src/timezone/: mod.rs  timezone_handler.rs  timezone_model.rs  timezone_route.rs
src/user/: mod.rs  user_handler.rs  user_model.rs  user_query.rs  user_route.rs  user_tool.rs
