[package]
name = "device_app"
version = "0.1.0"
edition = "2024"
authors = ["Andre Queiroz <andrequeiroz.com@gmail.com>"]

[dependencies]

#Actix web framework and run-time
actix-web = "4.11.0"

#Environment variable
dotenv = "0.15.0"

#MySql access library
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "chrono", "uuid"] }

# Openssl for build (if openssl is not already installed on the dev server)
openssl = { version = "0.10.71", features = ["vendored"] }

# Data serialization library
serde = { version = "1.0.219", features = ["derive"] }

chrono = {version = "0.4.41", features = ["serde"]}

# Data Log
log = "0.4.27"
log4rs = "1.4.0-rc2"

# Data hash
scrypt = "0.11.0"

# Data My jsonwebtoken
jwt_lib = { git = "https://github.com/andrequeiroz2/lib_jwt"}

mqtt_device = { git = "https://github.com/andrequeiroz2/lib_mqtt"}

# lazy_static library
once_cell = "1.21.3"

serde_json = "1.0.140"

tokio = "1.47.1"
futures = "0.3.31"

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde"
]
